<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:elevation="10dp"
    app:cardElevation="10dp"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#3498DB">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/dateTv"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/date"
                android:gravity="center"
                android:background="#3498DB"
                android:padding="10dp"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/taskTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/task"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:maxLines="1"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/descriptionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="#000"
                android:text="@string/description"
                android:textSize="15sp"
                android:maxLines="3"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>